--- a/src/index.css
+++ b/src/index.css
@@ -52,11 +52,15 @@ li{
   width: 82%;
 }
 .btn{
-  background-color: black;
+  background-color: hsl(0, 0%, 17%);
   height: 100%;
   width: 44px;
   border-top-right-radius: 12px;
   border-bottom-right-radius: 12px;
+  transition: 0.4s ease;
+}
+.btn:hover{
+  background-color: hsl(0, 0%, 29%);
 }
 .resultBar{
   position: absolute;
@@ -105,7 +109,6 @@ li{
   flex-wrap: wrap;
   text-align: center;
 }
-
 @media(min-width: 1024px){
   main{
     width: 1024px;
